[gd_scene load_steps=4 format=3 uid="uid://c5jxyh2x7o3mq"]

[ext_resource type="Texture2D" uid="uid://b8sq5t5tbup3i" path="res://assets/smart-phone-with-blank-screen-is-removebg-preview.png" id="1_3vi8l"]
[ext_resource type="Texture2D" uid="uid://b0yrg6w3ujsmo" path="res://assets/me-dude.png" id="2_8rhti"]
[ext_resource type="Script" uid="uid://bp1ga0hmmbtkl" path="res://phone_container.gd" id="2_ohhpf"]

[node name="root" type="Node2D"]

[node name="screenRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 646.0

[node name="screen" type="HBoxContainer" parent="screenRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="report" type="Button" parent="screenRoot/screen"]
layout_mode = 2
text = "Report!"

[node name="phoneTex" type="TextureRect" parent="screenRoot/screen"]
layout_mode = 2
texture = ExtResource("1_3vi8l")
expand_mode = 3

[node name="phoneContainer" type="VBoxContainer" parent="screenRoot/screen/phoneTex" node_paths=PackedStringArray("chatContainer")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -241.0
offset_right = 136.5
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ohhpf")
chatContainer = NodePath("chat/chathistory")

[node name="PanelContainer" type="HBoxContainer" parent="screenRoot/screen/phoneTex/phoneContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="screenRoot/screen/phoneTex/phoneContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_8rhti")
expand_mode = 2

[node name="Label" type="Label" parent="screenRoot/screen/phoneTex/phoneContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Guy 1"

[node name="chat" type="ScrollContainer" parent="screenRoot/screen/phoneTex/phoneContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="chathistory" type="VBoxContainer" parent="screenRoot/screen/phoneTex/phoneContainer/chat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Text 1" type="Label" parent="screenRoot/screen/phoneTex/phoneContainer/chat/chathistory"]
layout_mode = 2
text = "Text 1"

[node name="Text 2" type="Label" parent="screenRoot/screen/phoneTex/phoneContainer/chat/chathistory"]
layout_mode = 2
text = "Text 2"

[node name="Text 3" type="Label" parent="screenRoot/screen/phoneTex/phoneContainer/chat/chathistory"]
layout_mode = 2
text = "Text 3"

[node name="HBoxContainer" type="HBoxContainer" parent="screenRoot/screen/phoneTex/phoneContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer"]
layout_mode = 2
text = "Message 1"

[node name="Button2" type="Button" parent="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer"]
layout_mode = 2
text = "Message 2"

[node name="Button3" type="Button" parent="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer"]
layout_mode = 2
text = "Message 3"

[node name="Button2" type="Button" parent="screenRoot/screen"]
layout_mode = 2
text = "Commit <3"

[connection signal="button_down" from="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer/Button" to="screenRoot/screen/phoneTex/phoneContainer" method="_on_message_1_down"]
[connection signal="button_down" from="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer/Button2" to="screenRoot/screen/phoneTex/phoneContainer" method="_on_message_2_down"]
[connection signal="button_down" from="screenRoot/screen/phoneTex/phoneContainer/HBoxContainer/Button3" to="screenRoot/screen/phoneTex/phoneContainer" method="_on_message_3_down"]
